loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:11: error: 'while' expected but 'if' found.
  if(nbBiscuits<=2) {
  ^Poucet2:17: error: '(' expected but ';' found.
  nbBiscuits=0
^